--- a/package.json
+++ b/package.json
@@ -1,48 +1,1 @@
-{
-  "name": "todo-list-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@heroicons/react": "^2.1.5",
-    "@reduxjs/toolkit": "^2.3.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^11.11.9",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
-  }
-}
+{" homepage":"https://UAB16604.github.io/ToDoApp","name":"todo-list-app","version":"0.1.0","private":true,"dependencies":{"@heroicons/react":"^2.1.5","@reduxjs/toolkit":"^2.3.0","@testing-library/jest-dom":"^5.17.0","@testing-library/react":"^13.4.0","@testing-library/user-event":"^13.5.0","date-fns":"^4.1.0","framer-motion":"^11.11.9","react":"^18.3.1","react-dom":"^18.3.1","react-redux":"^9.1.2","react-scripts":"5.0.1","web-vitals":"^2.1.4"},"scripts":{"start":"react-scripts start","build":"react-scripts build","predeploy":"npm run build","deploy":"gh-pages -d build","test":"react-scripts test","eject":"react-scripts eject"},"eslintConfig":{"extends":["react-app","react-app/jest"]},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]},"devDependencies":{"autoprefixer":"^10.4.20","gh-pages":"^6.2.0","postcss":"^8.4.47","tailwindcss":"^3.4.14"}}
